connect frontend to api
use express-generator framework

--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "pa-db",
-  "version": "1.0.0",
-  "description": "backend for personal assistant app",
-  "main": "index.js",
+  "name": "todolist-db",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "author": "Darby Ross",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "mysql": "^2.18.1",
-    "nodemon": "^2.0.4"
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "debug": "~2.6.9",
+    "express": "^4.16.4",
+    "http-errors": "^1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "^1.9.1",
+    "mysql": "^2.18.1"
   }
 }
